add better history, fix saving non-weight+reps exercises, remove tamagui

--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -20,14 +20,12 @@
     "@motify/core": "^0.18.0",
     "@motify/skeleton": "^0.18.0",
     "@shopify/flash-list": "1.4.0",
-    "@tamagui/babel-plugin": "^1.28.2",
-    "@tamagui/shorthands": "^1.28.2",
-    "@tamagui/themes": "^1.28.2",
     "@tanstack/react-query": "^4.16.1",
     "@trpc/client": "^10.1.0",
     "@trpc/react-query": "^10.1.0",
     "@trpc/server": "^10.1.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "comma-number": "^2.1.0",
     "expo": "^48.0.10",
     "expo-auth-session": "^4.0.3",
     "expo-constants": "~14.2.1",
@@ -55,7 +53,6 @@
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "tamagui": "^1.28.2",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -63,6 +60,7 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/preset-env": "^7.19.3",
     "@babel/runtime": "^7.19.0",
+    "@types/comma-number": "^2.1.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.70.6",
     "@types/react-native-global-props": "^1.1.3",
