--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -19,6 +19,7 @@
     "@motify/components": "^0.18.0",
     "@motify/core": "^0.18.0",
     "@motify/skeleton": "^0.18.0",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@shopify/flash-list": "1.4.0",
     "@tanstack/react-query": "^4.16.1",
     "@trpc/client": "^10.1.0",
