--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -48,6 +48,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-global-props": "^1.1.5",
     "react-native-heroicons": "^3.2.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
