--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -31,6 +31,7 @@
     "expo-auth-session": "^4.0.3",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
+    "expo-haptics": "^12.4.0",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-random": "~13.1.1",
