--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@acme/api": "*",
     "@acme/tailwind-config": "*",
-    "@clerk/clerk-expo": "^0.15.0",
+    "@clerk/clerk-expo": "^0.18.19",
     "@expo-google-fonts/inter": "^0.2.3",
     "@motify/components": "^0.18.0",
     "@motify/core": "^0.18.0",
     "@motify/skeleton": "^0.18.0",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@shopify/flash-list": "1.4.0",
     "@tanstack/react-query": "^4.16.1",
     "@trpc/client": "^10.1.0",
@@ -31,7 +31,7 @@
     "expo-auth-session": "^4.0.3",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
-    "expo-haptics": "^12.4.0",
+    "expo-haptics": "~12.2.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-random": "~13.1.1",
