--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -1,16 +1,22 @@
 {
   "cli": {
-    "version": ">= 5.0.2"
+    "version": ">= 5.0.2",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
+      "autoIncrement": true,
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
     },
     "preview": {
+      "autoIncrement": true,
       "distribution": "internal"
     },
-    "production": {}
+    "production": { "autoIncrement": true }
   },
   "submit": {
     "production": {}
