--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -46,6 +46,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-global-props": "^1.1.5",
