--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,12 +11,14 @@
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
-    "push": "pnpm with-env drizzle-kit push:mysql",
+    "push": "pnpm with-env drizzle-kit push:sqlite",
     "studio": "pnpm with-env drizzle-kit studio",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@libsql/client": "^0.5.2",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.16.0",
     "drizzle-orm": "^0.29.4"
   },
