--- a/turbo.json
+++ b/turbo.json
@@ -44,6 +44,7 @@
     "AUTH_DISCORD_ID",
     "AUTH_DISCORD_SECRET",
     "AUTH_REDIRECT_PROXY_URL",
+    "CLERK_SECRET_KEY",
     "AUTH_SECRET"
   ]
 }
