--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,9 +14,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@acme/auth": "workspace:^0.1.0",
     "@acme/db": "workspace:^0.1.0",
     "@acme/validators": "workspace:^0.1.0",
+    "@clerk/nextjs": "^4.29.9",
     "@trpc/server": "11.0.0-next-beta.294",
     "superjson": "2.2.1",
     "zod": "^3.22.4"
