--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
-  "include": ["src", "drizzle.config.ts"],
+  "include": ["src", "drizzle.config.ts", "types.ts"],
   "exclude": ["node_modules"]
 }
