--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -23,7 +23,6 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.22.2",
     "@trpc/client": "11.0.0-next-beta.294",
     "@trpc/react-query": "11.0.0-next-beta.294",
     "@trpc/server": "11.0.0-next-beta.294",
@@ -31,7 +30,8 @@
     "clsx": "^2.1.0",
     "geist": "^1.2.2",
     "lucide-react": "^0.360.0",
-    "next": "^14.1.0",
+    "mitt": "^3.0.1",
+    "next": "^14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "2.2.1",
