--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -5,7 +5,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "expo start",
+    "dev-disabled-until-we-actually-do-the-mobile-app-lol": "expo start",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
     "android": "expo run:android",
