--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.360.0",
     "mitt": "^3.0.1",
     "next": "^14.1.4",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "2.2.1",
