--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -37,6 +37,7 @@
     "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-swipeable-list": "^1.9.3",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
