--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -31,6 +31,7 @@
     "@trpc/server": "11.0.0-next-beta.294",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "fuse.js": "^7.0.0",
     "geist": "^1.2.2",
     "lucide-react": "^0.360.0",
