--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -19,9 +19,11 @@
     "@acme/validators": "workspace:^0.1.0",
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.10",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
@@ -40,6 +42,7 @@
     "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-swipeable-list": "^1.9.3",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.2.1",
