--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -23,7 +23,8 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.16.0",
     "drizzle-orm": "^0.29.4",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:^0.2.0",
