--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -42,6 +42,7 @@
     "next": "^14.1.4",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-flip-toolkit": "^7.1.0",
     "react-hook-form": "^7.51.2",
@@ -57,6 +58,7 @@
     "@acme/prettier-config": "workspace:^0.1.0",
     "@acme/tailwind-config": "workspace:^0.1.0",
     "@acme/tsconfig": "workspace:^0.1.0",
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
