--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -20,6 +20,10 @@
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.10",
     "@hookform/resolvers": "^3.3.4",
+    "@mapbox/rehype-prism": "^0.9.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -29,6 +33,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@trpc/client": "11.0.0-next-beta.294",
     "@trpc/react-query": "11.0.0-next-beta.294",
     "@trpc/server": "11.0.0-next-beta.294",
@@ -47,6 +52,7 @@
     "react-flip-toolkit": "^7.1.0",
     "react-hook-form": "^7.51.2",
     "react-swipeable-list": "^1.9.3",
+    "remark-gfm": "^4.0.0",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -59,6 +65,7 @@
     "@acme/tailwind-config": "workspace:^0.1.0",
     "@acme/tsconfig": "workspace:^0.1.0",
     "@types/chart.js": "^2.9.41",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
