--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "lint:fix": "turbo lint --continue -- --fix --cache --cache-location node_modules/.cache/.eslintcache",
     "lint:ws": "pnpm dlx sherif@latest",
     "postinstall": "pnpm lint:ws",
-    "typecheck": "turbo typecheck"
+    "typecheck": "turbo typecheck",
+    "run-ci": "run-s format:fix lint:fix typecheck"
   },
   "devDependencies": {
     "@acme/prettier-config": "workspace:^0.1.0",
     "@turbo/gen": "^1.12.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "turbo": "^1.13.3",
     "typescript": "^5.3.3"
