--- a/package.json
+++ b/package.json
@@ -6,19 +6,45 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:seed": "tsx -r dotenv/config src/lib/db/seed.ts"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.16.0",
+    "@clerk/themes": "^2.2.34",
+    "@libsql/client": "^0.15.4",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.74.4",
+    "@trpc/client": "^11.1.0",
+    "@trpc/react-query": "^11.1.0",
+    "@trpc/server": "^11.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.42.0",
+    "list": "^2.0.19",
+    "lucide-react": "^0.501.0",
+    "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "drizzle-kit": "^0.31.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
