--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "drizzle-orm": "^0.42.0",
     "list": "^2.0.19",
     "lucide-react": "^0.501.0",
+    "motion": "^12.9.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
