--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@clerk/themes": "^2.2.34",
     "@libsql/client": "^0.15.4",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.0",
+    "@react-hook/media-query": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
@@ -39,6 +41,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "update": "^0.7.4",
+    "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
