--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@libsql/client": "^0.15.4",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-hook/media-query": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.12.0",
