--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/themes": "^2.2.34",
     "@libsql/client": "^0.15.4",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.0",
