--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/tanstack-react-query": "^11.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.42.0",
     "list": "^2.0.19",
     "lucide-react": "^0.501.0",
