--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "lucide-react": "^0.501.0",
     "motion": "^12.9.1",
     "next": "15.3.1",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-swipeable-list": "^1.10.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
