--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.42.0",
+    "fuse.js": "^7.1.0",
     "list": "^2.0.19",
     "lucide-react": "^0.501.0",
     "motion": "^12.9.1",
