--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.42.0",
     "fuse.js": "^7.1.0",
     "list": "^2.0.19",
