--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-swipeable-list": "^1.10.0",
+    "react-use-measure": "^2.1.7",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
