--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "drizzle-orm": "^0.42.0",
+    "embla-carousel-react": "^8.6.0",
     "fuse.js": "^7.1.0",
     "list": "^2.0.19",
     "lucide-react": "^0.501.0",
