--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "update": "^0.7.4",
+    "valtio": "^2.1.5",
     "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
