--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/query-async-storage-persister": "^5.81.5",
     "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-query-devtools": "^5.81.2",
+    "@tanstack/react-query-persist-client": "^5.81.5",
     "@trpc/client": "^11.1.1",
     "@trpc/react-query": "^11.1.1",
     "@trpc/server": "^11.1.1",
