--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.501.0",
     "motion": "^12.9.1",
     "next": "15.3.1",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-swipeable-list": "^1.10.0",
