--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.501.0",
     "motion": "^12.9.1",
-    "next": "15.3.1",
+    "next": "^15.4.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -73,7 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "dotenv": "^16.5.0",
-    "drizzle-kit": "^0.31.0",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.26.0",
     "eslint-config-next": "15.3.1",
     "eslint-plugin-drizzle": "^0.2.3",
