--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@clerk/themes": "^2.2.34",
     "@libsql/client": "^0.15.4",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@posthog/nextjs-config": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
@@ -50,6 +51,8 @@
     "lucide-react": "^0.501.0",
     "motion": "^12.9.1",
     "next": "^15.4.1",
+    "posthog-js": "^1.258.3",
+    "posthog-node": "^5.6.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
